Fixes play pause button and autoplay on iOS add previous through history back

--- a/src/index.scss
+++ b/src/index.scss
@@ -147,5 +147,5 @@ button.pause svg {
   height: 4rem;
 }
 
-.play svg:first-child { display: none; }
-.pause svg:last-child { display: none; }
+.play svg:last-child { display: none; }
+.pause svg:first-child { display: none; }
